fea-rs/test-data/compile-tests/mini-latin/bad/variable_value_record_oob.fea
valueRecordDef <0 (wght=100:-100 wght=1100:-150) 0 0> foo;
